--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ a{
 
 i.fa {
     margin-right: 0.3rem;
+    font-size: 1.2rem;
 }
 
 #links {
@@ -58,7 +59,7 @@ i.fa {
     color: #fff;
     text-align: center;
     margin-bottom: 20px;
-    padding: 17px;
+    padding: 10px;
     text-decoration: none;
     font-size: 1.2rem;
     font-weight: 300;
@@ -73,3 +74,9 @@ i.fa {
     color: #000000;
     border: none;
 }
+
+/* .iconify {
+padding-top: 0px;
+
+
+} */
